Cancellable workflows
This commit adds some functionality to make workflows cancellable. I don't think this works 100% and feels
a bit janky implementing a special context type and all sorts of extra checks with channels and parent
contexts. But it seems to work based on some minor testing.
