# internal/daemon/controller/api/workflow/handler.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"encoding/json"
 	"errors"
+	"fmt"
 	"slices"
 	"time"
 
@@ -11,13 +12,16 @@ import (
 	"github.com/jackc/pgtype"
 
 	"github.com/davidsbond/orca/internal/daemon/controller/database/task"
+	"github.com/davidsbond/orca/internal/daemon/controller/database/worker"
 	"github.com/davidsbond/orca/internal/daemon/controller/database/workflow"
+	worker_api "github.com/davidsbond/orca/internal/daemon/worker/api/worker"
 )
 
 type (
 	Handler struct {
 		workflows Repository
 		tasks     TaskRepository
+		workers   WorkerRepository
 	}
 
 	Repository interface {
@@ -29,16 +33,22 @@ type (
 	TaskRepository interface {
 		ListForWorkflowRun(ctx context.Context, runID string) ([]task.Run, error)
 	}
+
+	WorkerRepository interface {
+		Get(ctx context.Context, id string) (worker.Worker, error)
+	}
 )
 
 var (
-	ErrNotFound = errors.New("not found")
+	ErrNotFound     = errors.New("not found")
+	ErrCannotCancel = errors.New("cannot cancel")
 )
 
-func NewHandler(workflows Repository, tasks TaskRepository) *Handler {
+func NewHandler(workflows Repository, tasks TaskRepository, workers WorkerRepository) *Handler {
 	return &Handler{
 		workflows: workflows,
 		tasks:     tasks,
+		workers:   workers,
 	}
 }
 
@@ -151,4 +161,46 @@ func (h *Handler) DescribeRun(ctx context.Context, runID string) (Description, e
 	})
 
 	return description, nil
+}
+
+func (h *Handler) CancelRun(ctx context.Context, runID string) error {
+	run, err := h.workflows.Get(ctx, runID)
+	switch {
+	case errors.Is(err, workflow.ErrNotFound):
+		return ErrNotFound
+	case err != nil:
+		return err
+	}
+
+	if run.Status == workflow.StatusSkipped ||
+		run.Status == workflow.StatusComplete ||
+		run.Status == workflow.StatusFailed ||
+		run.Status == workflow.StatusTimeout ||
+		run.Status == workflow.StatusCancelled {
+		return ErrCannotCancel
+	}
+
+	// If this workflow has been assigned and sent to a worker, we'll call the worker to cancel the
+	// workflow if its in flight.
+	if run.WorkerID.Valid {
+		wrk, err := h.workers.Get(ctx, run.WorkerID.V)
+		if err != nil {
+			return err
+		}
+
+		client, err := worker_api.Dial(ctx, wrk.AdvertiseAddress)
+		if err != nil {
+			return fmt.Errorf("failed to dial worker: %w", err)
+		}
+
+		return errors.Join(
+			client.CancelWorkflowRun(ctx, runID),
+			client.Close(),
+		)
+	}
+
+	// If this workflow has yet to be sent to a worker, we can just update its status
+	// locally, so it won't be picked up by a controller
+	run.Status = workflow.StatusCancelled
+	return h.workflows.Save(ctx, run)
 }
